--- a/conf/battle/feature.conf
+++ b/conf/battle/feature.conf
@@ -7,6 +7,10 @@
 //         assume unit types (1: Pc, 2: Mob, 4: Pet, 8: Homun)
 //--------------------------------------------------------------
 
+// Mail(Note 1)
+// Requires: 2006 Clients or later
+feature.mail: off
+
 // Buying store (Note 1)
 // Requires: 2010-04-27aRagexeRE or later
 feature.buying_store: on
