--- a/conf/messages.conf
+++ b/conf/messages.conf
@@ -52,7 +52,7 @@
 24: Job level raised.
 25: Job level lowered.
 26: %d seconds left until you can use this item again.
-//27 FREE
+27: Mail system is disabled.
 28: No player found.
 29: 1 player found.
 30: %d players found.
@@ -60,7 +60,7 @@
 32: PvP: On.
 33: GvG: Off.
 34: GvG: On.
-//35 FREE
+35: Current location of the shop and chat room creation is disabled.
 36: Appearance changed.
 37: An invalid number was specified.
 38: Invalid location number, or name.
