--- a/db/pre-re/item_db.conf
+++ b/db/pre-re/item_db.conf
@@ -40409,7 +40409,7 @@ item_db: (
 		noauction: true
 	}
 	Script: <"
-		bonus bDex,3;
+		bonus bDex,1;
 		bonus2 bSubEle,Ele_Neutral,5;
 		skill WZ_FROSTNOVA,1;
 	">
@@ -79518,7 +79518,6 @@ item_db: (
 	Script: <" getitem 5374,1; ">
 },
 */
-/*
 {
 	Id: 13920
 	AegisName: "Satanic_Chain_P_Box"
@@ -79526,9 +79525,13 @@ item_db: (
 	Type: 18
 	Buy: 20
 	Weight: 10
-	Script: <" getitem 5376,1; ">
+	Trade: {
+		nodrop: true
+		noselltonpc: true
+		nogstorage: true
+	}
+	Script: <" getitem Satanic_Chain_P,1; ">
 },
-*/
 {
 	Id: 13921
 	AegisName: "Antique_Pipe_Box"
@@ -79536,7 +79539,12 @@ item_db: (
 	Type: 18
 	Buy: 20
 	Weight: 10
-	Script: <" getitem 5377,1; ">
+	Trade: {
+		nodrop: true
+		noselltonpc: true
+		nogstorage: true
+	}
+	Script: <" getitem Antique_Pipe,1; ">
 },
 /*
 {
@@ -89077,6 +89085,7 @@ item_db: (
 	AegisName: "Prontera_Warp_Pass"
 	Name: "Prontera Warp Pass"
 	Type: 2
+	Stack: [1,1]
 	Trade: {
 		nodrop: true
 		notrade: true
