--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -2,5 +2,14 @@
 //                 Custom Scripts                    //
 // ================================================= //
 
+npc: npc/custom_scripts/warper.txt
+
 // Name Change Card
 npc: npc/custom_scripts/others/name_change_card.txt
+
+// ------------------- Events ---------------------
+//npc: npc/custom_scripts/events/kafra_item2box.txt
+npc: npc/custom_scripts/redeem.txt
+
+// ------------------ Merchants -------------------
+npc: npc/custom_scripts/bottle_merchant.txt
