--- a/conf/char-server.conf
+++ b/conf/char-server.conf
@@ -95,7 +95,7 @@ autosave_time: 60
 save_log: yes
 
 // Start point, Map name followed by coordinates (x,y)
-start_point: new_1-1,53,104
+start_point: prontera,156,91
 
 // Starting items for new characters
 // Max number of items is MAX_STARTITEM in char.c (default 32)
