--- a/db/pre-re/item_db.conf
+++ b/db/pre-re/item_db.conf
@@ -37585,9 +37585,13 @@ item_db: (
 	Refine: false
 	View: 383
 	Trade: {
+		notrade: true
+		nostorage: true
+		nocart: true
 		nodrop: true
 		noselltonpc: true
 		nogstorage: true
+		nomail: true
 	}
 	Script: <" bonus2 bSubRace,RC_DemiPlayer,2; ">
 },
@@ -50157,6 +50161,22 @@ item_db: (
 	Type: 3
 	Buy: 0
 	Weight: 10
+},
+{
+	Id: 6495
+	AegisName: "Merit_Badge"
+	Name: "Merit Badge"
+	Type: 3
+	Trade: {
+		nodrop: true
+		notrade: true
+		noselltonpc: true
+		nocart: true
+		nostorage: true
+		nogstorage: true
+		nomail: true
+		noauction: true
+	}
 },
 {
 	Id: 6512
@@ -89080,24 +89100,7 @@ item_db: (
 		bonus2 bMagicAddRace,RC_Demon,15;
 	">
 },
-{
-	Id: 19662
-	AegisName: "Prontera_Warp_Pass"
-	Name: "Prontera Warp Pass"
-	Type: 2
-	Stack: [1,1]
-	Trade: {
-		nodrop: true
-		notrade: true
-		noselltonpc: true
-		nocart: true
-		nostorage: true
-		nogstorage: true
-		nomail: true
-		noauction: true
-	}
-	Script: <" warp "prontera",117,80; ">
-},
+
 // Custom
 {
 	Id: 30000
@@ -89171,5 +89174,23 @@ item_db: (
 		query_sql ("SELECT `balance` FROM `cp_credits` WHERE `account_id` = "+getcharid(3), .@RoKPoints);
 		message strcharinfo(0),"You have a total of "+.@RoKPoints+" RoK Points in your account.";
 	">
+},
+{
+	Id: 30003
+	AegisName: "Prontera_Warp_Pass"
+	Name: "Prontera Warp Pass"
+	Type: 2
+	Stack: [1,1]
+	Trade: {
+		nodrop: true
+		notrade: true
+		noselltonpc: true
+		nocart: true
+		nostorage: true
+		nogstorage: true
+		nomail: true
+		noauction: true
+	}
+	Script: <" warp "prontera",156,91; ">
 },
 )
