--- a/db/pre-re/map_zone_db.conf
+++ b/db/pre-re/map_zone_db.conf
@@ -127,23 +127,23 @@ zones: (
 	name: "GvG" /* changing this name requires MAP_ZONE_GVG_NAME to also be changed in src/map/map.h file */
 	
 	disabled_skills: {
+		HP_ASSUMPTIO: "PLAYER"
+		CASH_ASSUMPTIO: "PLAYER"
+		TF_BACKSLIDING: "PLAYER"
+		HP_BASILICA: "PLAYER"
+		CR_CULTIVATION: "PLAYER"
+		SM_ENDURE: "PLAYER"
+		SA_ABRACADABRA: "PLAYER"
+		WZ_ICEWALL: "PLAYER"
+		CG_MOONLIT: "PLAYER"
+		RG_INTIMIDATE: "PLAYER"
 		AL_TELEPORT: "PLAYER"
 		AL_WARP: "PLAYER"
-		WZ_ICEWALL: "PLAYER"
-		TF_BACKSLIDING: "PLAYER"
-		RG_INTIMIDATE: "PLAYER"
 		WE_CALLPARTNER: "PLAYER"
-		HP_ASSUMPTIO: "PLAYER"
-		HP_BASILICA: "PLAYER"
-		CG_MOONLIT: "PLAYER"
 		WE_CALLPARENT: "PLAYER"
 		WE_CALLBABY: "PLAYER"
-		CR_CULTIVATION: "PLAYER"
 		NJ_KIRIKAGE: "PLAYER"
-		CASH_ASSUMPTIO: "PLAYER"
 		BS_GREED: "PLAYER"
-		SC_FATALMENACE: "PLAYER"
-		SC_DIMENSIONDOOR: "PLAYER"
 	}
 	
 	disabled_items: {
@@ -151,6 +151,7 @@ zones: (
 		Greed_Scroll: true
 		Pty_Assumptio_Scroll: true
 	}
+	
 	/* 5 second duration increase on GvG */
 	/* knockback disabled */
 	/* GvG Mode Damage Reductions */
@@ -159,12 +160,13 @@ zones: (
 	/* - misc_damage_rate   -40% */
 	/* - long_damage_rate   -20% */
 	/* - short_damage_rate  -20% */
+	
 	mapflags: (
 		"invincible_time_inc	5000",
 		"noknockback",
-		"weapon_damage_rate	60",
-		"magic_damage_rate	60",
-		"misc_damage_rate	60",
+		"weapon_damage_rate	50",
+		"magic_damage_rate	50",
+		"misc_damage_rate	50",
 		"long_damage_rate	80",
 		"short_damage_rate	80",
 		"nocashshop",
