--- a/db/quest_db.conf
+++ b/db/quest_db.conf
@@ -14629,4 +14629,49 @@ quest_db: (
 	Id: 60355
 	Name: "Bathroom Ghost"
 },
+
+// Custom Quests
+// Bounty Abyss Lakes [Hunting Mission] (WIP)
+{
+	Id: 20000
+	Name: "Bounty Board - Ferus (Green)"
+	Targets: (
+	{
+		MobId: 1717
+		Count: 50
+	},
+	)
+},
+{
+	Id: 20001
+	Name: "Bounty Board - Ferus (Red)"
+	Targets: (
+	{
+		MobId: 1714
+		Count: 50
+	},
+	)
+},
+// 20002 - Acidus Blue
+// 20003 - Acidus Gold
+// 20004 - Dragon Egg
+// 20005 - Hydrolancer
+// 20006 - Hydrolancer (Timer)
+// 20007 - Detardeurus
+{
+	Id: 20007
+	Name: "Bounty Board - Detardeurus"
+	Targets: (
+	{
+		MobId: 1719
+		Count: 1
+	},
+	)
+},
+// 20008 - Detardeurus CD (1 day)
+{
+	Id: 20008
+	Name: "Bounty Board - Detardeurus (Time Limit)"
+	TimeLimit: 86400
+},
 )
