--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -3,13 +3,25 @@
 // ================================================= //
 
 npc: npc/custom_scripts/warper.txt
+npc: npc/custom_scripts/tool_dealer.txt
 
 // Name Change Card
 npc: npc/custom_scripts/others/name_change_card.txt
 
+// Newbie Rewards
+npc: npc/custom_scripts/others/newbie_reward.txt
+
 // ------------------- Events ---------------------
 //npc: npc/custom_scripts/events/kafra_item2box.txt
-npc: npc/custom_scripts/redeem.txt
+//npc: npc/custom_scripts/redeem.txt
 
 // ------------------ Merchants -------------------
 npc: npc/custom_scripts/bottle_merchant.txt
+
+// ------------------ Quests ----------------------
+// - Bounty Boards
+npc: npc/custom_scripts/quests/bounty_boards/bounty_abyss.txt
+npc: npc/custom_scripts/quests/bounty_boards/bounty_amatsu.txt
+
+// - Thor V2 Quest
+npc: npc/custom_scripts/quests/thor_v2_quest.txt
