--- a/conf/battle/exp.conf
+++ b/conf/battle/exp.conf
@@ -16,7 +16,7 @@ base_exp_rate: 500
 job_exp_rate: 500
 
 // Turn this on to allow a player to level up more than once from a kill. (Note 1)
-multi_level_up: no
+multi_level_up: yes
 
 // Setting this can cap the max experience one can get per kill specified as a
 // % of the current exp bar. (Every 10 = 1.0%)
@@ -70,10 +70,10 @@ pvp_exp: yes
 death_penalty_type: 1
 
 // Base exp. penalty rate (Each 100 is 1% of their exp)
-death_penalty_base: 100
+death_penalty_base: 300
 
 // Job exp. penalty rate (Each 100 is 1% of their exp)
-death_penalty_job: 100
+death_penalty_job: 300
 
 // When a player dies (to another player), how much zeny should we penalize them with?
 // NOTE: It is a percentage of their zeny, so 100 = 1%
